<resources>
    <string name="app_name">AppRecordatorio</string>

    <!--Dias de la semana alarma -->
    <string name="domAlarma">D</string>
    <string name="luAlarma">L</string>
    <string name="marAlarma">M</string>
    <string name="mieAlarma">X</string>
    <string name="jueAlarma">J</string>
    <string name="vieAlarma">V</string>
    <string name="saAlarma">S</string>

    <!--Btns -->
    <string name="btnCancelar">CANCELAR</string>
    <string name="btnCrear">CREAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloGenerales">Recordatorios Generales</string>
    <string name="tituloAlarmas">Alarmas</string>
    <string name="tituloNuevaAlarma">Nueva Alarma</string>
    <string name="tituloTutor">Tutor</string>
</resources>